# vald-www

./: .gitignore  AUTH_MIGRATION_PLAN.md  CLAUDE.md  CMakeLists.txt  EXTRACTION_COMPARISON.md  MODERNIZATION_PLAN.md  README.md  manage.py  pres_in.967310  preselect3.txt  pyproject.toml  vald.service  ~ 
backend/: README.md  parsemail.c  parserequest.c  service-ems.sh
config/: clients.register  clients.register.local  default.cfg  htmldefault.cfg  site_config_local.php.template  site_config_master.php
documentation/: about_vald.html  contact.html  datasets-kur.txt  datasets.html  datasets.txt  errors.html  interface.html  jobrunner.md  references.html  req_ems.html  reqcustom.html  reqextall.html  reqextall.txt  reqextelm.html  reqextelm.txt  reqextstar.html  reqextstar.txt  reqshowlin.html  reqshowlin.txt  reqtypes.html  usage.html
interface/: confirmcontact.html  error.html  extractall.html  extractelement.html  fault.html  logout.html  maintenance.html  navigate.html  notregistered.html  persconf-start.html  showline.html  topform_not_logged_in.html  version.html
news/: 2011-03-23  2014-02-05  2015-05-23  2015-11-01  2015-12-01  2018-06-08  2020-05-18  2025-02-03  2025-11-22
news/old/: 2003-08-15  2004-10-22  2005-07-01  2005-10-11  2007-01-22  2007-02-26  2008-01-03  2008-04-23  2008-09-25  2009-04-28
old/interface/: confirmsubmitted.html  extractstellar.html  persconf-end.html  showline-online.html  topform_logged_in.html  unitselection.html
public_html/php/: server_status.php  vald.php
requests/: contact-req.txt  extractall-req.txt  extractelement-req.txt  extractstellar-req.txt  showline-online-req.txt  showline-req.txt
scripts/: check_requests.py  test_100.sh  test_five.sh  test_one.sh
style/: style.css
tests/: conftest.py  test_config.py  test_extraction.py  test_preselect5_comparison.py  test_vald3_reader.py
vald/: admin.py  apps.py  backend.py  extraction.py  forms.py  job_runner.py  models.py  persconfig.py  species.py  urls.py  userprefs.py  utils.py  vald3_reader.py  views.py
vald/management/commands/: cleanup_old_results.py  import_default_config.py  import_persconf.py  sync_register_files.py  test_email.py
vald/migrations/: 0001_initial.py  0002_user_useremail.py  0003_request.py  0004_remove_linelist_personal_config_and_more.py  0005_request_user_fk.py  0006_user_preferences.py  0007_fix_cm_to_1_per_cm.py  0008_add_config_models.py
vald/templates/vald/: activate_account.html  base.html  contact.html  (+19 more)
vald/templatetags/: __init__.py  vald_extras.py
vald_web/: asgi.py  settings.py  settings_deploy.py  urls.py  wsgi.py
(+4 files in other folders)
