[project]
name = "vald-www"
version = "1.0.0"
description = "VALD Web Interface - Django replacement for PHP app"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "django-ratelimit>=4.1.0",
    "gunicorn>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vald_web.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
