[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "vald-www"
version = "1.0.0"
description = "VALD Web Interface - Django replacement for PHP app"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "django-ratelimit>=4.1.0",
    "gunicorn>=21.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "nanobind>=1.3.2",
]

[tool.scikit-build]
minimum-version = "0.4"
cmake.verbose = true
wheel.py-api = "cp312"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "ON"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vald_web.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
markers = [
    "preselect5: tests that require preselect5 binary (deselect with '-m \"not preselect5\"')",
]
addopts = "-m 'not preselect5'"
